src/web/static/main.css
/* taken from w2ui index.css */
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

body {
    overflow: hidden;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
}

h1 {
    margin: 15px 0px;
}

h2 {
    margin: 8px 0px;
}

ul {
    margin: 10px 0px 10px 40px;
}

.content {
    padding: 10px;
    line-height: 150%;
}

/* my stuff */
#main_layout {
    position: absolute;
    width: 100%;
    height: 100%;
    color: white;
}

#menu_root {
    color: white;
}

.menu_button, .over {
    color: white;
    background-color: black;
}

.banner a {
    color: white;
    text-decoration: none;
}

.banner {
    padding: 12px 20px; 
    font-size: 18px
}

#editable_content {
  height: 100%;
  width: 100%;
  border-color: #ccc;
  font-size: 14px;
}

#preview_content {
  padding-left: 20px;
}

.child_outer {
    margin: 2px;
}

.child_content {
    padding: 2px;
    background-color: #f1f1f1;
    border: 1px solid #d3d3d3;
    height: 250px;
    overflow: scroll;
}

.child_header {
    padding: 2px 3px 2px 3px;
    cursor: move;
    z-index: 10;
    background-color: #323948;
    color: #fff;
    white-space: nowrap;
}

